frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment
  namespace: myapp

spec:
  replicas: 3

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend   
  
    spec:
      containers:
        - name: frontend-v1  
          image: kartik71845/frontend:v1
          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
