frontend-svc.yml
apiVersion: v1
kind: Service

metadata:
  name: frontend-svc
  namespace: myapp

spec:
  selector:
    app: frontend
  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  
  type: NodePort
